@@ -1,3 +1,8 @@
+2005-06-12  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* Test/testoucs.odd: need start element to be TEI.2 not TEI
+	* Test/testdocbook*xml: remove attributes referencing XSD schemas
+
 2005-06-10  Sebastian Rahtz  <rahtz@spqr-ibm>
 
 	* Source/CO/biblstru.odd: simplify content model so that it has
